# holyc-lang

./: .gitignore  CMakeLists.txt  cmake-config.h.in
include/: aostr.h  ast.h  cctrl.h  cmake-config.h  compile.h  config.h  dict.h  lexer.h  list.h  parser.h  prsasm.h  prslib.h  prsutil.h  util.h  x86.h
src/: Makefile  ast.c  cctrl.c  lexer.c  main.c  parser.c  prsasm.c  x86.c
